DiRT Showdown and Bioshock Infinite both only render half of the screen - only the lower left of the two triangles. This happens right away, even at the splash screen. export MESA_GL_VERSION_OVERRIDE=4.1 export MESA_GLSL_VERSION_OVERRIDE=410 The scalar VS backend appears to be at fault, because INTEL_DEBUG=vec4 fixes it.
Patch on list: https://lists.freedesktop.org/archives/mesa-dev/2016-May/115859.html
You probably meant https://patchwork.freedesktop.org/patch/86011/
Heh, whoops. Yes, that one :)
Fixed by commit e0e7280db0b03b08479ef9db681db186f80605e5 Author: Kenneth Graunke <kenneth@whitecape.org> Date: Sat May 7 17:30:02 2016 -0700 i965: Clamp "Maximum VP Index" to 1 when gl_ViewportIndex isn't written.
Bug manifests with Mesa 11.2 (e.g. one in Ubuntu 16.04), but is gone with the latest Mesa from Git. -> Verified.
(Although title mentions BDW, verification of the issue and its fix were done on SKL.)
Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.